--- a/.github/workflows/cd-deploy-tag.yaml
+++ b/.github/workflows/cd-deploy-tag.yaml
@@ -1,8 +1,13 @@
 name: CD deploy tag
+
+permissions:
+  contents: read
+
 on:
   push:
     tags:
       - 'v*'
+
 jobs:
   deploy-tag:
     timeout-minutes: 3
