chore(scripts): add `noop` script to trigger CI

--- a/package.json
+++ b/package.json
@@ -229,7 +229,8 @@
   "version": "0.2.1",
   "nx": {},
   "scripts": {
-    "start": "npx concurrently --kill-others 'npx nx run-many -t start -p twenty-server twenty-front' 'npx wait-on tcp:3000 && npx nx run twenty-server:worker'"
+    "start": "npx concurrently --kill-others 'npx nx run-many -t start -p twenty-server twenty-front' 'npx wait-on tcp:3000 && npx nx run twenty-server:worker'",
+    "noop": "echo 'I exist to trigger the CI'"
   },
   "workspaces": {
     "packages": [
