Fix missing prettier on twetny-shared

--- a/packages/twenty-shared/project.json
+++ b/packages/twenty-shared/project.json
@@ -3,15 +3,10 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/twenty-shared/src",
   "projectType": "library",
-  "tags": [
-    "scope:shared"
-  ],
+  "tags": ["scope:shared"],
   "targets": {
     "build": {
-      "dependsOn": [
-        "generateBarrels",
-        "^build"
-      ],
+      "dependsOn": ["generateBarrels", "^build"],
       "outputs": [
         "{projectRoot}/dist",
         "{projectRoot}/ai/package.json",
@@ -35,10 +30,7 @@
     "generateBarrels": {
       "executor": "nx:run-commands",
       "cache": true,
-      "inputs": [
-        "production",
-        "{projectRoot}/scripts/generateBarrels.ts"
-      ],
+      "inputs": ["production", "{projectRoot}/scripts/generateBarrels.ts"],
       "outputs": [
         "{projectRoot}/src/index.ts",
         "{projectRoot}/src/*/index.ts",
@@ -51,12 +43,7 @@
     "typecheck": {},
     "test": {},
     "lint": {
-      "options": {
-        "lintFilePatterns": [
-          "{projectRoot}/src/**/*.{ts,tsx,json}",
-          "{projectRoot}/package.json"
-        ]
-      },
+      "options": {},
       "configurations": {
         "fix": {}
       }
